--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,30 @@
 version: '3'
 services:
+
+  ############################################# Sessão contendo a estrutura que simula cloud para podermos construir o cenário de armazenamento ##############################################
+  
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+    image: localstack/localstack
+    networks: 
+      - kafka-broker-network
+    ports:
+      - "127.0.0.1:4510-4559:4510-4559" 
+      - "127.0.0.1:4566:4566"
+    environment:
+      - LOCALSTACK_SERVICES=s3
+      - DEBUG=${DEBUG-}
+      - DATA_DIR=${DATA_DIR-}
+      - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
+      - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
+      - HOST_TMP_FOLDER=${TMPDIR:-/tmp/}localstack
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    volumes:
+      - "${TMPDIR:-/tmp}/localstack:/tmp/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+
+
+  ############################################# Sessão contendo a estrutura Kafka para Data Acquisition ##############################################
   zookeeper-server:
     image: confluentinc/cp-zookeeper:latest
     platform: linux/x86_64
@@ -52,6 +77,8 @@ services:
       - 8080:8080
     environment:
       KAFKA_CONNECT_URIS: http://kaka-connect-server:8083
+
+  ####################################################################################################################################################
 
 networks: 
   kafka-broker-network:
