--- a/data-platform-infra/docker-compose.yaml
+++ b/data-platform-infra/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
+    platform: linux/x86_64
     networks: 
       - kafka-broker-network
     ports:
