--- a/data-platform-infra/docker-compose.yaml
+++ b/data-platform-infra/docker-compose.yaml
@@ -3,25 +3,22 @@ services:
 
   ############################################# Sessão contendo a estrutura que simula cloud para podermos construir o cenário de armazenamento ##############################################
   
-  localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+  localstack-server:
+    container_name: "localstack-server"
     image: localstack/localstack
     platform: linux/x86_64
-    networks: 
-      - kafka-broker-network
+    hostname: aws.localstack.docker
     ports:
       - "127.0.0.1:4510-4559:4510-4559" 
       - "127.0.0.1:4566:4566"
     environment:
       - LOCALSTACK_SERVICES=s3
-      - DEBUG=${DEBUG-}
-      - DATA_DIR=${DATA_DIR-}
-      - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
-      - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
-      - HOST_TMP_FOLDER=${TMPDIR:-/tmp/}localstack
+      - DEBUG=1
+      - DATA_DIR=./tmp/localstack-data/
+      - HOST_TMP_FOLDER=./tmp/localstack
       - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
-      - "${TMPDIR:-/tmp}/localstack:/tmp/localstack"
+      - "./tmp/localstack:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
 
 
@@ -29,8 +26,6 @@ services:
   zookeeper-server:
     image: confluentinc/cp-zookeeper:latest
     platform: linux/x86_64
-    networks: 
-      - kafka-broker-network
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -38,8 +33,6 @@ services:
   kafka-server:
     image: confluentinc/cp-kafka:latest
     platform: linux/x86_64
-    networks: 
-      - kafka-broker-network
     depends_on:
       - zookeeper-server
     ports:
@@ -55,8 +48,6 @@ services:
   kaka-connect-server:
     image: debezium/connect
     platform: linux/x86_64
-    networks: 
-      - kafka-broker-network
     depends_on:
       - kafka-server
     ports:
@@ -70,19 +61,16 @@ services:
   kafka-connect-ui:
     image: debezium/debezium-ui
     platform: linux/x86_64
-    networks: 
-      - kafka-broker-network
     depends_on:
       - kaka-connect-server
     ports:
-      - 8080:8080
+      - 8085:8080
     environment:
       KAFKA_CONNECT_URIS: http://kaka-connect-server:8083
 
   ####################################################################################################################################################
 
 networks: 
-  kafka-broker-network:
-    external: true
-    name:  kafka-broker-network
-    driver: bridge 
+  default:
+    external:
+      name: platform_network
