--- a/source-database-infra/docker-compose.yaml
+++ b/source-database-infra/docker-compose.yaml
@@ -3,8 +3,6 @@ services:
   sales-db:
     image: mysql
     platform: linux/x86_64
-    networks: 
-      - kafka-broker-network
     environment:
       MYSQL_ROOT_PASSWORD: 1234MySql
       MYSQL_DATABASE: db_sales
@@ -14,7 +12,6 @@ services:
       - 3306:3306
 
 networks: 
-  kafka-broker-network:
-    external: true
-    name:  kafka-broker-network
-    driver: bridge 
+  default:
+    external:
+      name: platform_network
